resources/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      containers:
        - name: frontend
          image: 730335359268.dkr.ecr.us-east-1.amazonaws.com/nodejs-frontend:325fba55a675ee062be3735608eee4d289bd8b97	
          ports:
            - containerPort: 80
